@@ -4,6 +4,7 @@ devel
 + validate parameters from parameter file after initialization
 + add auto_t feature for simann, enable with "anneal_temp auto"
 + the error sum is now calculated as w*d^2 and no longer as (w*d)^2
++ added the proper citations to most of the analytic potential functions
 
 devel-20110331
 + adjust copyright years to 2011
